--- a/main.css
+++ b/main.css
@@ -65,7 +65,7 @@ main{
 	border-radius: 7px 0 0 7px ;
 	border: 1px solid grey;
 }
-#item-add-button{
+z{
 	background-color: #3366ff;
 	color: white;
 	font-size: 18px;
