--- a/main.css
+++ b/main.css
@@ -242,7 +242,8 @@ main{
 
 .btn{
 	position: relative;
-	cursor: pointer;	
+	cursor: pointer;
+	box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.5);	
 }
 
 .btn[data-tooltip]::after {
