--- a/main.css
+++ b/main.css
@@ -65,7 +65,7 @@ main{
 	border-radius: 7px 0 0 7px ;
 	border: 1px solid grey;
 }
-z{
+#item-add-btn{
 	background-color: #3366ff;
 	color: white;
 	font-size: 18px;
@@ -243,7 +243,7 @@ z{
 .btn{
 	position: relative;
 	cursor: pointer;
-	box-shadow: 0px 3px 2px rgba(0, 0, 0, 0.5);	
+	box-shadow: 0px -3px 2px rgba(0, 0, 0, 0.3) inset;	
 }
 
 .btn[data-tooltip]::after {
