--- a/main.css
+++ b/main.css
@@ -95,9 +95,6 @@ main{
 	width: 100%;
     font-size: 18px;
 }
-.bought{
-	text-decoration: line-through;
-}
 
 .quantity-controls {
 	width: 100%;
@@ -134,10 +131,7 @@ main{
 .minus {
 	background-color: red;
 }
-.disabled{
-	cursor: default;
-	opacity: 0.3;
-}
+
 
 .plus {
 	background-color: green;
@@ -160,6 +154,11 @@ main{
 	background-color: lightgrey;
 }
 
+.bought{
+}
+.bought .item-name{
+	text-decoration: line-through;
+}
 .buy {
 	width: 100px;
 }
@@ -245,6 +244,10 @@ main{
 	cursor: pointer;
 	box-shadow: 0px -3px 2px rgba(0, 0, 0, 0.3) inset;	
 }
+.disabled{
+	cursor: default;
+	opacity: 0.3;
+}
 
 .btn[data-tooltip]::after {
 	content: attr(data-tooltip);
@@ -261,13 +264,12 @@ main{
 	bottom: 50%;
 	left: 0;
 	right: 0;
-
+	
 	transition: all 0.3s; 
 }
-  
+
 .btn[data-tooltip]:hover::after{
 	transform: translateY(-70%); /* Position the tooltip above the container */
 	visibility: visible;
 	opacity: 1;
 }
-  
