--- a/main.css
+++ b/main.css
@@ -155,6 +155,7 @@ main{
 }
 
 .bought{
+	background-color: cyan;
 }
 .bought .item-name{
 	text-decoration: line-through;
@@ -201,7 +202,7 @@ main{
 	text-decoration: inherit;
 }
 
-.amount {
+.stats-quantity {
 	background-color: orange;
 	border-radius: 10px;
 	
