--- a/main.css
+++ b/main.css
@@ -182,6 +182,7 @@ main{
 }
 .stats-items{
 	display: flex;
+	background-color: white;
 	border-top: 1px solid lightgrey;
 	flex-flow: row wrap;
 	align-items: center;
